--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -406,7 +406,7 @@ Jesse Buntyn, Jolie Wise, Danielle Koche
 </section>
 <section id="introduction" class="slide level2">
 <h2>Introduction</h2>
-<p>This is an introduction to understanding cross-validation, its methods, and its importance in data science and statistics.</p>
+<p>This is an introduction to understanding cross-validation, its methods, and its importance in data science &amp; statistics.</p>
 <p>Cross-validation is a cornerstone methodology in the field of data science, essential for assessing the predictive performance of statistical models and ensuring their generalizability to unseen data. This resampling technique allows researchers to evaluate how models will perform in practice, addressing critical challenges like overfitting and underfitting, thereby ensuring robustness and reliability of model predictions across various data subsets.</p>
 <p>The tutorial by <span class="citation" data-cites="song2021making">[@song2021making]</span> further elaborates on the practical application of cross-validation, presenting a structured, step-by-step approach to assessing model generalizability and emphasizing the significance of the repeated k-folds technique for reducing bias in model evaluation.</p>
 <p><strong>The overall 5-step process to cross-validation introduced by them is as follows:</strong></p>
