--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -676,7 +676,9 @@ AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{6}
 </section>
 <section id="statistical-modeling" class="slide level2">
 <h2>Statistical Modeling</h2>
-<h4 id="fold-cross-validation">10-fold Cross Validation:</h4>
+</section>
+<section id="fold-cross-validation" class="slide level2">
+<h2>10-fold Cross Validation:</h2>
 <div class="cell">
 <div class="cell-output cell-output-stdout">
 <pre><code>[1] 0.1335980 0.1327269</code></pre>
@@ -692,7 +694,9 @@ AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{6}
 </div>
 </div>
 <p>With any variation of k-fold cross validation, the dataset is split into k sized folds that will all be equal. Here, the dataset is split in 10 folds. As previously discussed, <span class="citation" data-cites="wong2019reliable">[@wong2019reliable]</span> mentions 10-fold cross validation analysis to be most effective in most cases. In model 1, all predictor variables are included. In model 2, only ejection fraction and serum creatinine are included, as the researchers that provided the data set came to the conclusion that death events could be predicted using those 2 variables alone. Interestingly enough, the first model that included all variables produced a lower MSE (mean square error), indicating that from this CV test, model one would be better to use than model 2.</p>
-<h4 id="fold-cross-validation-1">5-fold Cross Validation:</h4>
+</section>
+<section id="fold-cross-validation-1" class="slide level2">
+<h2>5-fold Cross Validation:</h2>
 <div class="cell">
 <div class="cell-output cell-output-stdout">
 <pre><code>[1] 0.1376102 0.1355044</code></pre>
@@ -708,7 +712,9 @@ AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{6}
 </div>
 </div>
 <p>Similar to the 10-fold models above, our dataset is split into equal pieces. However, in this case, we are only doing 5 folds compared to our 10-fold analysis above. Again, in model 1, all predictor variables are included. In model 2, only ejection fraction and serum creatinine are included. With 5-fold cross validation, the data set is divided into 5 parts (as opposed to 10 in 10-fold). Model 1 still has a lower MSE than the full model that includes all predictor variables.</p>
-<h4 id="single-hold-out-method">Single Hold-Out Method:</h4>
+</section>
+<section id="single-hold-out-method" class="slide level2">
+<h2>Single Hold-Out Method:</h2>
 <div class="cell">
 <div class="cell-output cell-output-stdout">
 <pre><code>  obs DEATH_EVENT yhat_m1_SHO sqerr_m1_SHO yhat_m2_SHO sqerr_m2_SHO age anaemia
@@ -747,7 +753,9 @@ AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{6}
 </div>
 </div>
 <p>Using the Single Hold-Out Method, the data set is split into a training set and a test/validation set. Here, we are using a 50-50 split. After conducting the analysis, it can be seen that model 2 provides us with a lower mean squared error. Model 2 includes only ejection fraction and serum creatinine as predictor variables, meaning this reduced model is a better fit according to this cross-validation technique.</p>
-<h4 id="leave-one-out-cross-validation-loocv">Leave-One-Out Cross-Validation (LOOCV):</h4>
+</section>
+<section id="leave-one-out-cross-validation-loocv" class="slide level2">
+<h2>Leave-One-Out Cross-Validation (LOOCV):</h2>
 <div class="cell">
 <div class="cell-output cell-output-stdout">
 <pre><code>[1] 0.1342392 0.1342105</code></pre>
@@ -757,7 +765,9 @@ AUC = \frac{S_p-n_p(n_n+1)/2}{n_pn_n} \tag{6}
 </div>
 </div>
 <p>Leave-One-Out cross-validation (LOOCV) follows a similar data set splitting technique, but in this case, the data is split k-ways, where k is equal to the number of data points. According to LOOCV, the full model (which includes all predictor variables) is a better fit due to a lower mean squared error compared to the reduced model (which only includes serum creatinine and ejection fraction).</p>
-<h4 id="monte-carlo-cross-validation">Monte Carlo Cross-Validation:</h4>
+</section>
+<section id="monte-carlo-cross-validation" class="slide level2">
+<h2>Monte Carlo Cross-Validation:</h2>
 <div class="cell">
 <div class="cell-output cell-output-stdout">
 <pre><code>  [1] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
