Jolie - Adding slide link to report & combining some of the intro

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Jesse Buntyn, Jolie Wise, Danielle Koche">
-<meta name="dcterms.date" content="2024-04-14">
+<meta name="dcterms.date" content="2024-04-15">
 
 <title>Cross-Validation - Methods &amp; Importance in Data Science and Statistics</title>
 <style>
@@ -3253,7 +3253,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">April 14, 2024</p>
+      <p class="date">April 15, 2024</p>
     </div>
   </div>
   
@@ -3265,6 +3265,7 @@ window.Quarto = {
 </header>
 
 
+<p><a href="indextoslides2.html">Slides</a></p>
 <section id="introduction" class="level2">
 <h2 class="anchored" data-anchor-id="introduction">Introduction</h2>
 <p>This is an introduction to understanding cross-validation, its methods, and its importance in data science and statistics.</p>
