--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -1362,18 +1362,18 @@ Jesse Buntyn, Jolie Wise, Danielle Koche
 <li>CVC had not been considered for unsupervised methods or binary outcome variables at the time of publication.</li>
 </ul>
 </section>
-<section id="methods---cross-validation-techniques" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="single-hold-out">Single Hold-Out</h3>
 <p>Single hold-out cross-validation is one more simple versions of cross-validation being used <span class="citation" data-cites="yadav2016analysis">(<a href="#/references" role="doc-biblioref" onclick>Yadav and Shukla 2016</a>)</span>. The dataset gets divided into a training set and validation, or hold-out, set. The training set is used to fit a model, which is then used for prediction on the validation set. The performance of the model is then determined by the variance between the predictions and the actual data. One of the main drawbacks of this method is that the training set and validation set can have different distributions, causing potentially unreliable models <span class="citation" data-cites="santos2023statistical">(<a href="#/references" role="doc-biblioref" onclick>Santos et al. 2023</a>)</span>.</p>
 </section>
-<section id="methods---cross-validation-techniques-1" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-1" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="k-fold">K-Fold</h3>
 <p><span class="citation" data-cites="jung2015ak">(<a href="#/references" role="doc-biblioref" onclick>Jung and Hu 2015</a>)</span> introduce an advanced k-fold averaging cross-validation procedure, advocating for the averaging of parameter estimates across folds to yield more stable and efficient outcomes. This method demonstrates significant potential in handling high-dimensional data and improving parameter estimation.</p>
 </section>
-<section id="methods---cross-validation-techniques-2" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-2" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="k-fold-1">K-Fold</h3>
 <p><strong>For the k-fold cross-validation process, the steps are as follows and see Figure 1:</strong></p>
 <ol type="1">
@@ -1385,8 +1385,8 @@ Jesse Buntyn, Jolie Wise, Danielle Koche
 <li><p>Calculate the overall test predictors by averaging all k test predictors.</p></li>
 </ol>
 </section>
-<section id="methods---cross-validation-techniques-3" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-3" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="k-fold-cont.">K-Fold (cont.)</h3>
 <pre><code>![Figure 1: Basic K-Fold Cross-Validation,
 k=5](images/K-fold-cross-validation-1.webp){width=&quot;413&quot;}
@@ -1397,14 +1397,14 @@ Source: [@Ranjan_2021]</code></pre>
 CV(k) = \frac{1}{k} \sum_{i=1}^{k} MSE_i \tag{1}
 \]</span></p>
 </section>
-<section id="methods---cross-validation-techniques-4" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-4" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="repeated-k-fold">Repeated K-Fold</h3>
 <p><strong>For clarity, the difference between K-folds and repeated K-folds, another method mentioned earlier, is as follows:</strong></p>
 <p>Repeated K-Fold Cross-Validation enhances the robustness of K-Fold by repeating the process multiple times and averaging the results. This method helps to reduce the variability of the single trial of K-Fold cross-validation, providing a more accurate estimate of the model’s ability to generalize to unseen data.</p>
 </section>
-<section id="methods---cross-validation-techniques-5" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-5" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="repeated-k-fold-cont.">Repeated K-Fold (cont.)</h3>
 <p>Here’s the process:</p>
 <ol type="1">
@@ -1414,13 +1414,13 @@ CV(k) = \frac{1}{k} \sum_{i=1}^{k} MSE_i \tag{1}
 </ol>
 <p>Notably, this technique of repeated K-Folds is especially useful when the data set is not too large and there is a need to ensure the stability of the evaluation metrics across different splits of the data.</p>
 </section>
-<section id="methods---cross-validation-techniques-6" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-6" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="leave-one-out">Leave-One-Out</h3>
 <p>Leave-one-out cross-validation (LOOCV) is a variation of k-fold cross-validation in that the dataset gets divided into multiple folds to be used for training and validation sets, then the model gets fitted and evaluated until each fold has been used as the validation set. However, for LOOCV, the validation set is comprised of a single observation, so k is equal to the sample size <span class="citation" data-cites="shao2016efficient">(<a href="#/references" role="doc-biblioref" onclick>Shao and Er 2016</a>)</span>. This method can be preferable to other methods when the sample size is small because the lack of randomness when dividing the dataset causes the accuracy estimate of the models to be constant <span class="citation" data-cites="wong2015performance">(<a href="#/references" role="doc-biblioref" onclick>Wong 2015</a>)</span>.</p>
 </section>
-<section id="methods---cross-validation-techniques-7" class="slide level2">
-<h2>Methods - Cross Validation Techniques</h2>
+<section id="methods---cv-techniques-7" class="slide level2">
+<h2>Methods - CV Techniques</h2>
 <h3 id="monte-carlo">Monte Carlo</h3>
 <p>Monte Carlo Cross-Validation (MCCV) is another commonly used method. Similar to the k-folds technique, MCCV randomly removes significant chunks of the dataset without replacement to use as its training and validation (<span class="math inline">\(s_v\)</span>) data sets <span class="citation" data-cites="haddad2013applicability">(<a href="#/references" role="doc-biblioref" onclick>Haddad et al. 2013</a>)</span>. This sampling is repeated N times. The criterion for this techniques, according to <span class="citation" data-cites="haddad2013applicability">(<a href="#/references" role="doc-biblioref" onclick>Haddad et al. 2013</a>)</span>, is as follows:</p>
 <p><span class="math display">\[
