--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -1280,11 +1280,12 @@ Jesse Buntyn, Jolie Wise, Danielle Koche
 <p>The dataset is split into k equally sized folds. Each fold is used once as a test set while the rest serve as the training set.</p>
 <h3 id="leave-one-out-cross-validation-loocv">Leave-One-Out Cross-Validation (LOOCV):</h3>
 <p>This is a special case of k-fold cross-validation where k equals the number of data points <span class="citation" data-cites="shao2016efficient">(<a href="#/references" role="doc-biblioref" onclick>Shao and Er 2016</a>)</span>. Each data point is used once as a test set.</p>
+</section>
+<section class="slide level2">
+
 <h3 id="stratified-cross-validation">Stratified Cross-Validation:</h3>
 <p>Ensures each fold reflects the class proportions in the dataset, particularly useful for imbalanced datasets.</p>
-</section>
-<section id="repeated-k-fold-cross-validation" class="slide level2">
-<h2>Repeated K-Fold Cross-Validation:</h2>
+<h3 id="repeated-k-fold-cross-validation">Repeated K-Fold Cross-Validation:</h3>
 <p>Repeats the K-Fold process multiple times and averages the results.</p>
 <p>The perspective of Berrar is enriched by <span class="citation" data-cites="schaffer1993selecting">(<a href="#/references" role="doc-biblioref" onclick>Schaffer 1993</a>)</span>, who explores the significance of cross-validation in selecting optimal classification methods, highlighting its necessity in dealing with imbalanced datasets through stratified approaches.</p>
 </section>
