reformatting of heading for performance metrics - dk

--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -1465,8 +1465,9 @@ R^2 = 1 - \frac{\sum{(y_i - \hat{y})^2}}{\sum{(y_i - \bar{y})^2}} \tag{5}
 \]</span></p>
 <p>where <span class="math inline">\(\bar{y}\)</span> is the mean value of <span class="math inline">\(y\)</span> <span class="citation" data-cites="ott2015introduction">(<a href="#/references" role="doc-biblioref" onclick>Ott and Longnecker 2015</a>)</span>.</p>
 </section>
-<section id="r2-vs.-mse-comparison" class="slide level2">
-<h2><span class="math inline">\(R^2\)</span> vs. MSE Comparison</h2>
+<section id="performance-metrics" class="slide level2">
+<h2>Performance Metrics</h2>
+<h3 id="r2-vs.-mse-comparison"><span class="math inline">\(R^2\)</span> vs. MSE Comparison</h3>
 <p>Ultimately, <span class="math inline">\(R^2\)</span> and MSE are related in that they both measure the model’s performance, but they do it in different ways. While <span class="math inline">\(R^2\)</span> measures the proportion of variance explained by the model, MSE measures the average error of the model’s predictions. In the context of cross-validation, both metrics can be used to compare models: a higher <span class="math inline">\(R^2\)</span> and a lower MSE would typically indicate a better predictive model.</p>
 </section>
 <section id="performance-metrics---auc" class="slide level2">
