--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -1281,7 +1281,7 @@ Jesse Buntyn, Jolie Wise, Danielle Koche
 <h3 id="k-fold-cross-validation">K-Fold Cross-Validation:</h3>
 <p>The dataset is split into k equally sized folds. Each fold is used once as a test set while the rest serve as the training set.</p>
 <h3 id="leave-one-out-cross-validation-loocv">Leave-One-Out Cross-Validation (LOOCV):</h3>
-<p>This is a special case of k-fold cross-validation where k equals the number of data points <span class="citation" data-cites="shao2016efficient">(<a href="#/references" role="doc-biblioref" onclick>Shao and Er 2016</a>)</span>. Each data point is used once as a test set.</p>
+<p>This is a special case of k-fold cross-validation where k equals the number of data points <span class="citation" data-cites="shao2016efficient">(<a href="#/references" role="doc-biblioref" onclick>Shao and Er 2016</a>)</span>. Each data point is used once as a test set. In a sense, Leave-One-Out Cross-Validation (LOOCV) is equivalent to setting k=1 in k-Fold Cross-Validation.</p>
 </section>
 <section class="slide level2">
 
